basic styling with minor html and js refactoring

--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,11 +1,15 @@
 .clocks
+  align-self center
+  background white
+  border 1px solid #ddd
   display flex
   flex-wrap wrap
-  margin 10vw
+  margin 5vw
+  padding px_to_rem(48)
 
 .clock
   flex 0 0 33.3333%
   height 100%
   stroke black
   stroke-linecap round
-  stroke-width 5px
+  stroke-width 4px
