--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,15 +1,21 @@
+OFFSET = 6%
+
 .clocks
   align-self center
-  background white
-  border 1px solid #ddd
+  margin 0 (OFFSET * -2) 0 0
+  padding (OFFSET * 2) 0 OFFSET (OFFSET * 2)
+
+.clocks__frame
   display flex
   flex-wrap wrap
-  margin 5vw
-  padding px_to_rem(48)
 
 .clock
-  flex 0 0 33.3333%
+  flex 0 0 ((1 / 3) * 100%)
   height 100%
+  margin (- OFFSET) 0 0 (- OFFSET)
   stroke black
   stroke-linecap round
   stroke-width 4px
+
+// .clock:nth-child(odd)
+//   background rgba(pink, .5)
