--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,5 +1,11 @@
 OFFSET = 6%
 
+n-clock
+  display block
+  stroke black
+  stroke-linecap round
+  stroke-width 4px
+
 .clocks
   align-self center
   margin 0 (OFFSET * -2) 0 0
@@ -9,13 +15,7 @@ OFFSET = 6%
   display flex
   flex-wrap wrap
 
-.clock
+.clocks__frame > n-clock
   flex 0 0 ((1 / 3) * 100%)
   height 100%
   margin (- OFFSET) 0 0 (- OFFSET)
-  stroke black
-  stroke-linecap round
-  stroke-width 4px
-
-// .clock:nth-child(odd)
-//   background rgba(pink, .5)
