css and js cleanup and optimization

--- a/source/stylus/clock/html.styl
+++ b/source/stylus/clock/html.styl
@@ -7,8 +7,12 @@ body
   text-size-adjust none
 
 body
-  display grid
+  align-items center
+  color rgba(black, .7)
+  display flex
   height 100%
+  justify-content center
+  flex-direction column
   min-height 100vh // fallback
   min-height calc(var(--viewport-unit, 1vh) * 100)
 
