--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -1,4 +1,8 @@
+// --------------------------------------------------
+// constants
+
 TRANSITION_SPEED = .3s
+
 
 // --------------------------------------------------
 // functions
@@ -10,6 +14,7 @@ px_to_em(px)
 px_to_rem(px)
   rem_units = px / 16
   return rem_units * 1rem
+
 
 // --------------------------------------------------
 // mixins
