more math added for layout; TODO added re: CSS offset value since it's still a magic number

--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,4 +1,5 @@
-OFFSET = 6%
+// TODO: Coordinate hand lengths with CSS 'offset' and calculate all values mathematically.
+OFFSET = 7%
 
 .clocks
   background white
