--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,5 +1,18 @@
-// TODO: Coordinate hand lengths with CSS 'offset' and calculate all values mathematically.
-OFFSET = 7%
+// Clocks lay out in a 3 x 3 grid.
+CLOCK_WIDTH = 1 / 3
+
+// NOTE: All of the values below need to be coordinated with same constants in 'customClock.js'
+CLOCK_SIZE = 100
+CLOCK_CENTER = CLOCK_SIZE / 2
+STROKE_WIDTH = 3
+HOURS_HAND_LENGTH = 30
+MINUTES_HAND_LENGTH = CLOCK_CENTER - STROKE_WIDTH
+
+// Gap between clock hands for 6:00, where hands are vertically aligned.
+CLOCK_GAP = 1
+
+// Calculate the offset as a percentage for laying out clocks mathematically.
+OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP) * CLOCK_WIDTH
 
 .clocks
   background white
@@ -10,20 +23,20 @@ OFFSET = 7%
 .clocks__frame
   display flex
   flex-wrap wrap
-  margin-right (OFFSET * -4)
-  padding (OFFSET *2) (OFFSET * 2) OFFSET
+  margin-right '%s%' % (OFFSET * -4)
+  padding '%s% %s% %s%' % ((OFFSET * 2) (OFFSET * 2) OFFSET)
 
 .clocks__frame > n-clock
-  flex 0 0 ((1 / 3) * 100%)
+  flex 0 0 (CLOCK_WIDTH * 100%)
   height 100%
-  margin (- OFFSET) 0 0 (- OFFSET)
+  margin '%s% 0 0 %s%' % ((- OFFSET) (- OFFSET))
 
 n-clock
   display block
 
 n-clock line
   stroke black
-  stroke-width 6px
+  stroke-width '%spx' % (STROKE_WIDTH * 2)
 
 n-clock circle 
   fill black
