constants moved to config; breakpoint added

--- a/source/stylus/clock/html.styl
+++ b/source/stylus/clock/html.styl
@@ -1,10 +1,13 @@
 html
 body
-  background #f7f7f7
+  background white
   margin 0
   padding 0
   -webkit-tap-highlight-color transparent
   text-size-adjust none
+
+  @media BREAKPOINT
+    background #f7f7f7
 
 body
   align-items center
