--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,35 +1,21 @@
-// Clocks lay out in a 3 x 3 grid.
-CLOCK_WIDTH = 1 / 3
-
-// NOTE: All of the values below need to be coordinated with same constants in 'customClock.js'
-CLOCK_SIZE = 100
-CLOCK_CENTER = CLOCK_SIZE / 2
-STROKE_WIDTH = 3
-HOURS_HAND_LENGTH = 30
-MINUTES_HAND_LENGTH = CLOCK_CENTER - STROKE_WIDTH
-
-// Gap between clock hands for 6:00, where hands are vertically aligned.
-CLOCK_GAP = 1
-
-// Calculate the offset as a percentage for laying out clocks mathematically.
-OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP) * CLOCK_WIDTH
-
 .clocks
-  background white
-  border 1px solid #ddd
-  margin px_to_rem(24)
   max-width px_to_rem(512)
+
+  @media BREAKPOINT
+    background white
+    border 1px solid #ddd
+    margin px_to_rem(24)
 
 .clocks__frame
   display flex
   flex-wrap wrap
-  margin-right '%s%' % (OFFSET * -4)
-  padding '%s% %s% %s%' % ((OFFSET * 2) (OFFSET * 2) OFFSET)
+  margin-right '%s%' % (CLOCK_OFFSET * -4)
+  padding '%s% %s% %s%' % ((CLOCK_OFFSET * 2) (CLOCK_OFFSET * 2) CLOCK_OFFSET)
 
 .clocks__frame > n-clock
   flex 0 0 (CLOCK_WIDTH * 100%)
   height 100%
-  margin '%s% 0 0 %s%' % ((- OFFSET) (- OFFSET))
+  margin '%s% 0 0 %s%' % ((- CLOCK_OFFSET) (- CLOCK_OFFSET))
 
 n-clock
   display block
