--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -1,10 +1,4 @@
 // --------------------------------------------------
-// constants
-
-TRANSITION_SPEED = .3s
-
-
-// --------------------------------------------------
 // functions
 
 px_to_em(px)
@@ -15,6 +9,33 @@ px_to_rem(px)
   rem_units = px / 16
   return rem_units * 1rem
 
+// --------------------------------------------------
+// constants
+
+// Clocks lay out in a 3 x 3 grid.
+CLOCK_WIDTH = 1 / 3
+
+CLOCKS_MARGIN = px_to_rem(24)
+CLOCKS_MAX_WIDTH = px_to_rem(512)
+
+// NOTE: All of the values below need to be coordinated with same constants in 'customClock.js'
+CLOCK_SIZE = 100
+CLOCK_CENTER = CLOCK_SIZE / 2
+STROKE_WIDTH = 3
+HOURS_HAND_LENGTH = 30
+MINUTES_HAND_LENGTH = CLOCK_CENTER - STROKE_WIDTH
+
+// Gap between clock hands for 6:00, where hands are vertically aligned.
+CLOCK_GAP = 1
+
+// Calculate the offset as a percentage for laying out clocks mathematically.
+CLOCK_OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP) * CLOCK_WIDTH
+
+// Transitions.
+TRANSITION_SPEED = .3s
+
+// Breakpoint.
+BREAKPOINT = 'screen and (min-width: %s)' % (CLOCKS_MAX_WIDTH + (CLOCKS_MARGIN * 2))
 
 // --------------------------------------------------
 // mixins
