minor constants refactor

--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,10 +1,10 @@
 .clocks
-  max-width px_to_rem(512)
+  max-width CLOCKS_MAX_WIDTH
 
   @media BREAKPOINT
     background white
     border 1px solid #ddd
-    margin px_to_rem(24)
+    margin CLOCKS_MARGIN
 
 .clocks__frame
   display flex
