--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -15,7 +15,7 @@ px_to_rem(px)
 // Clocks lay out in a 3 x 3 grid.
 CLOCK_WIDTH = 1 / 3
 
-CLOCKS_MARGIN = px_to_rem(24)
+CLOCKS_MARGIN = px_to_rem(32)
 CLOCKS_MAX_WIDTH = px_to_rem(512)
 
 // NOTE: All of the values below need to be coordinated with same constants in 'customClock.js'
@@ -35,7 +35,8 @@ CLOCK_OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP
 TRANSITION_SPEED = .3s
 
 // Breakpoint.
-BREAKPOINT = 'screen and (min-width: %s)' % (CLOCKS_MAX_WIDTH + (CLOCKS_MARGIN * 2))
+BREAKPOINT_1 = 'screen and (min-width: %s)' % CLOCKS_MAX_WIDTH
+BREAKPOINT_2 = 'screen and (min-width: %s)' % (CLOCKS_MAX_WIDTH + (CLOCKS_MARGIN * 2))
 
 // --------------------------------------------------
 // mixins
