--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -18,7 +18,7 @@ CLOCK_WIDTH = 1 / 3
 CLOCKS_MARGIN = px_to_rem(32)
 CLOCKS_MAX_WIDTH = px_to_rem(512)
 
-// NOTE: All of the values below need to be coordinated with same constants in 'customClock.js'
+// NOTE: All clock element dimensions below need to be coordinated with the same values in 'js/modules/customClock.js'
 CLOCK_SIZE = 100
 CLOCK_CENTER = CLOCK_SIZE / 2
 STROKE_WIDTH = 3
