simplified layout with no breakpoints

--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,15 +1,9 @@
 .clocks
   background white
-  border-bottom 1px solid #ddd
-  border-top 1px solid #ddd
-  overflow hidden
+  border 1px solid #ddd
+  margin 5vh 5vw
   max-width CLOCKS_MAX_WIDTH
-
-  @media BREAKPOINT_1
-    border 1px solid #ddd
-  
-  @media BREAKPOINT_2
-    margin CLOCKS_MARGIN
+  overflow hidden
 
 .clocks__frame
   display flex
