--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -16,7 +16,8 @@ CLOCK_GAP = 1
 // Calculate the offset as a percentage for laying out clocks mathematically.
 CLOCK_OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP) * CLOCK_WIDTH
 
-// Transition for no-js links.
+// 'no-js' styles.
+LINK_COLOR = #0070c9
 TRANSITION_SPEED = .3s
 
 // --------------------------------------------------
