--- a/source/stylus/config/index.styl
+++ b/source/stylus/config/index.styl
@@ -19,6 +19,7 @@ CLOCK_OFFSET = (CLOCK_SIZE - HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP
 // 'no-js' styles.
 LINK_COLOR = #0070c9
 TRANSITION_SPEED = .3s
+THEME_TRANSITION_SPEED = 1.5s
 
 // --------------------------------------------------
 
