refactored/simplified/consolidated CSS

--- a/source/stylus/clock/_config.styl
+++ b/source/stylus/clock/_config.styl
@@ -21,8 +21,7 @@ LINK_COLOR = #0070c9
 TRANSITION_SPEED = .3s
 THEME_TRANSITION_SPEED = 1.5s
 
-// --------------------------------------------------
-
+// mixins
 link(link, visited, active)
   &:link
     color link
