--- a/source/stylus/clock.styl
+++ b/source/stylus/clock.styl
@@ -1,2 +1,6 @@
-@import 'config/'
-@import 'clock/'
+@import 'clock/_config.styl'
+
+@import 'clock/html.styl'
+@import 'clock/clocks.styl'
+@import 'clock/no-js.styl'
+@import 'clock/theme.styl'
