--- a/source/stylus/clock/no-js.styl
+++ b/source/stylus/clock/no-js.styl
@@ -1,12 +1,13 @@
 body[no-js]
   background white
+  color black
 
 body[no-js] .clocks
   display none
 
 .no-js
   color #333
-  font-family 'Helvetica Neue', Helvetica, Arial , sans-serif
+  font-family 'Helvetica Neue', Helvetica, Arial, sans-serif
   font-weight bold
   padding 1rem
 
@@ -18,6 +19,7 @@ body[no-js] .clocks
 
 .no-js__message > a
   link(LINK_COLOR, LINK_COLOR, rgba(LINK_COLOR, .7))
+  white-space nowrap
 
 [no-touch] .no-js__message > a
   transition color TRANSITION_SPEED
