--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -20,7 +20,7 @@ n-clock
   margin '%s% 0 0 %s%' % ((- CLOCK_OFFSET) (- CLOCK_OFFSET))
 
 .clock__hand
-  stroke-width '%spx' % (STROKE_WIDTH * 2)
+  stroke-width '%spx' % (ClockDimensions.STROKE_WIDTH * 2)
   transition stroke THEME_TRANSITION_SPEED
 
 .clock__pivot
