JS enum and stylus hash comments updates

--- a/source/stylus/clock/_config.styl
+++ b/source/stylus/clock/_config.styl
@@ -1,5 +1,5 @@
-// NOTE: All 'ClockDimensions' values need to stay coordinated with
-// values in './source/js/modules/customClock.js'
+// NOTE: All 'ClockDimensions' hash values need to stay coordinated with
+// values in 'source/js/modules/customClock.js'
 
 // @type Hash
 ClockDimensions = {
