minor stylus cleanup

--- a/source/stylus/clock/_config.styl
+++ b/source/stylus/clock/_config.styl
@@ -14,9 +14,9 @@ ClockThemes = {
   }
 }
 
-// @type Hash
 // NOTE: All 'ClockDimensions' hash values need to stay coordinated with
 // values in 'source/js/modules/customClock.js'
+// @type Hash
 ClockDimensions = {
   SIZE: 100
   CENTER: 50 // Half of SIZE
@@ -27,19 +27,19 @@ ClockDimensions = {
 // @type Number
 MINUTES_HAND_LENGTH = ClockDimensions.CENTER - ClockDimensions.STROKE_WIDTH
 
-// @type Number
 // Clocks lay out in a 3 x 3 grid.
+// @type Number
 CLOCK_WIDTH = 1 / 3
 
 // @type String
-CLOCKS_MAX_WIDTH = 40rem // 512px
+CLOCKS_MAX_WIDTH = 40rem // = 512px
 
-// @type Number
 // Gap between clock hands for 6:00, where hands are vertically aligned.
+// @type Number
 CLOCK_GAP = 1
 
-// @type Number
 // Calculate the offset as a percentage for laying out clocks mathematically.
+// @type Number
 CLOCK_OFFSET = (ClockDimensions.SIZE - ClockDimensions.HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH - CLOCK_GAP) * CLOCK_WIDTH
 
 // @type String
