--- a/source/stylus/clock/theme.styl
+++ b/source/stylus/clock/theme.styl
@@ -6,7 +6,7 @@
   top 0
   width 100vw
 
-for name, theme in ClockThemes
+for name, theme in ClockTheme
   [theme=\"{name}\"]
     {body}&
       background '%s' % theme.BACKGROUND
