--- a/source/stylus/config/constants.styl
+++ b/source/stylus/config/constants.styl
@@ -5,12 +5,18 @@ ClockTheme = {
     BORDER: #ddd
     FACE: white
     HANDS: black
+    LINK: rgba(black, .7)
+    LINK_ACTIVE: black
+    TEXT: rgba(black, .7)
   },
   dark: {
     BACKGROUND: #111
     BORDER: #222
     FACE: black
     HANDS: white
+    LINK: rgba(white, .7)
+    LINK_ACTIVE: white
+    TEXT: rgba(white, .7)
   }
 }
 
@@ -22,6 +28,12 @@ ClockDimensions = {
   CENTER: 50 // Half of SIZE
   STROKE_WIDTH: 3
   HOURS_HAND_LENGTH: 30
+}
+
+// @type Hash
+Transition = {
+  DEFAULT: .3s
+  THEME: 1.5s
 }
 
 // @type Number
@@ -37,6 +49,3 @@ CLOCKS_MAX_WIDTH = 40rem // = 512px
 // Calculate the offset as a percentage for laying out clocks mathematically.
 // @type Number
 CLOCK_OFFSET = (ClockDimensions.SIZE - ClockDimensions.HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH) * CLOCK_WIDTH
-
-// @type String
-THEME_TRANSITION_SPEED = 1.5s
