--- a/source/stylus/clock.styl
+++ b/source/stylus/clock.styl
@@ -1,9 +1,9 @@
-@import 'config/constants.styl'
-@import 'config/functions.styl'
-@import 'config/mixins.styl'
+@import './config/constants.styl'
+@import './config/functions.styl'
+@import './config/mixins.styl'
 
-@import 'clock/html.styl'
-@import 'clock/clocks.styl'
-@import 'clock/footer.styl'
-@import 'clock/no-js.styl'
-@import 'clock/theme.styl'
+@import './clock/html.styl'
+@import './clock/clocks.styl'
+@import './clock/footer.styl'
+@import './clock/no-js.styl'
+@import './clock/theme.styl'
