custom properties and hash refactoring

--- a/source/stylus/clock.styl
+++ b/source/stylus/clock.styl
@@ -2,8 +2,8 @@
 @import './config/functions.styl'
 @import './config/mixins.styl'
 
+@import './clock/_root_vars.styl'
 @import './clock/html.styl'
 @import './clock/clocks.styl'
 @import './clock/footer.styl'
 @import './clock/no-js.styl'
-@import './clock/theme.styl'
