--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,16 +1,18 @@
 .clocks
   align-self center
+  background var(--face)
+  border 1px solid var(--border)
   grid-area content
   justify-self center
   margin 5vh 5vw
   max-width CLOCKS_MAX_WIDTH
   overflow hidden
-  transition 'background %s, border %s' % (Transition.THEME Transition.THEME)
+  transition background var(--transition-theme), border var(--transition-theme)
 
 .clocks__frame
   display flex
   flex-wrap wrap
-  margin-right '%s%' % (CLOCK_OFFSET * -4)
+  margin-right '-%s%' % (CLOCK_OFFSET * 4)
   padding '%s% %s% %s%' % ((CLOCK_OFFSET * 2) (CLOCK_OFFSET * 2) CLOCK_OFFSET)
 
 n-clock
@@ -19,11 +21,13 @@ n-clock
 .clocks__frame > n-clock
   flex 0 0 (CLOCK_WIDTH * 100%)
   height 100%
-  margin '%s% 0 0 %s%' % ((- CLOCK_OFFSET) (- CLOCK_OFFSET))
+  margin '-%s% 0 0 -%s%' % (CLOCK_OFFSET CLOCK_OFFSET)
 
 .clock__hand
-  stroke-width '%spx' % (ClockDimensions.STROKE_WIDTH * 2)
-  transition 'stroke %s' % Transition.THEME
+  stroke var(--hands)
+  stroke-width '%spx' % (Clock.STROKE_WIDTH * 2)
+  transition stroke var(--transition-theme)
 
 .clock__pivot
-  transition 'fill %s' % Transition.THEME
+  fill var(--hands)
+  transition fill var(--transition-theme)
