--- a/source/stylus/clock/footer.styl
+++ b/source/stylus/clock/footer.styl
@@ -1,6 +1,6 @@
 .copyright
   color var(--text)
-  font-size px_to_em(12)
+  font-size var(--fineprint)
   grid-area footer
   margin 0
   padding px_to_rem(16)
