--- a/source/stylus/config/constants.styl
+++ b/source/stylus/config/constants.styl
@@ -1,3 +1,10 @@
+@import 'functions';
+
+// @type Hash
+Breakpoint = {
+  MEDIUM: 'screen and (min-width: %s)' % px_to_rem(640)
+}
+
 // NOTE: All 'Clock' hash values need to stay coordinated with
 // values in 'source/js/modules/customClock.js'
 // @type Hash
