--- a/source/stylus/clock/html.styl
+++ b/source/stylus/clock/html.styl
@@ -1,4 +1,4 @@
-font_face()
+all_webfonts()
 
 html
 body
@@ -9,7 +9,6 @@ body
 
 body
   background var(--background)
-  body_font()
   display grid
   grid-template-areas 'content'\
                       'footer'
@@ -18,6 +17,7 @@ body
   min-height 100vh // fallback
   min-height calc(var(--viewport-unit, 1vh) * 100)
   transition background var(--transition-theme), color var(--transition-theme)
+  webfont()
 
 *
   box-sizing border-box
