--- a/source/stylus/clock/no-js.styl
+++ b/source/stylus/clock/no-js.styl
@@ -7,8 +7,9 @@ TRANSITION_SPEED = .3s
 // @mixin link
 // @param Color link
 // @param Color visited
+// @param Color hover
 // @param Color active
-link(link, visited, active)
+link(link, visited, hover, active)
   &:link
     color link
 
@@ -19,11 +20,9 @@ link(link, visited, active)
   &:focus
     color active
 
-// @mixin link_hover
-// @param Color hover
-link_hover(hover)
-  &:hover
-    color hover
+  [no-touch] &
+    &:hover
+      color hover
 
 // ------------------------------
 // 'no-js' styles
@@ -48,10 +47,8 @@ body[no-js] .clocks
   text-align center
 
 .no-js__message > a
-  link(LINK_COLOR, LINK_COLOR, rgba(LINK_COLOR, .7))
+  link(LINK_COLOR, LINK_COLOR, rgba(LINK_COLOR, .7), rgba(LINK_COLOR, .7))
   white-space nowrap
 
 [no-touch] .no-js__message > a
   transition color TRANSITION_SPEED
-  link_hover(rgba(LINK_COLOR, .7))
-
