footer and copyright layout updates

--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -1,9 +1,15 @@
-.copyright
+.footer
+  align-items center
   color var(--text)
-  font-size var(--fineprint)
+  display flex
   grid-area footer
+  height var(--footer-height)
+  justify-content center
+
+.copyright
+  font-size var(--fineprint)
   margin 0
-  padding px_to_rem(16)
+  padding 0
   text-align center
 
 .copyright__years
