header element added to fix low Lighthouse accessibility score (still needs layout tweaks)

--- a/src/stylus/clock.styl
+++ b/src/stylus/clock.styl
@@ -4,5 +4,6 @@
 
 @import './clock/_root_vars'
 @import './clock/html'
+@import './clock/header'
 @import './clock/clocks'
 @import './clock/footer'
