--- a/src/stylus/clock/_root_vars.styl
+++ b/src/stylus/clock/_root_vars.styl
@@ -1,5 +1,7 @@
 :root
   --footer-height px_to_rem(60)
+  --header-height px_to_rem(44)
+  --site-header px_to_rem(16)
   --transition .3s
   --transition-theme 1.5s
   --fineprint px_to_em(12)
@@ -24,3 +26,5 @@
 
   @media Breakpoint.MEDIUM
     --fineprint px_to_em(14)
+    --header-height px_to_rem(60)
+    --site-header px_to_rem(20)
