header layout; borders and transitions

--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -1,10 +1,12 @@
 .footer
   align-items center
+  border-top 1px solid var(--border)
   color var(--text)
   display flex
   grid-area footer
   height var(--footer-height)
   justify-content center
+  transition border var(--transition-theme)
 
 .copyright
   font-size var(--fineprint)
