--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -1,5 +1,5 @@
 .header
-  background var(--face)
+  background var(--header-background)
   border-bottom 1px solid var(--border)
   color var(--text)
   grid-area header
