--- a/src/stylus/clock.styl
+++ b/src/stylus/clock.styl
@@ -4,6 +4,8 @@
 
 @import './clock/_root_vars'
 @import './clock/html'
-@import './clock/header'
 @import './clock/clocks'
+@import './clock/color_picker'
 @import './clock/footer'
+@import './clock/header'
+
