--- a/src/stylus/config/mixins.styl
+++ b/src/stylus/config/mixins.styl
@@ -7,6 +7,50 @@ all_webfonts()
     src url('../webfonts/AvenirNext-Variable.woff2') format('woff2')
 
 // @mixin
+// @param Color color
+// @param String thickness [3px]
+css_icon_menu(color, thickness = 3px)
+  width = (thickness * 6)
+  border_top = (thickness * 3)
+  border_bottom = thickness
+  height = thickness
+
+  &
+    align-items center
+    display inline-flex
+
+  &::before
+    border-bottom border_bottom solid color
+    border-top border_top double color
+    content ''
+    height height
+    width width
+
+// @mixin
+// @param Color color
+// @param String size
+// @param String direction
+css_triangle(color, size, direction)
+  if direction == 'up'
+    border-bottom size solid color
+    border-left size solid transparent
+    border-right size solid transparent
+  if direction == 'down'
+    border-left size solid transparent
+    border-right size solid transparent
+    border-top size solid color
+  if direction == 'right'
+    border-bottom size solid transparent
+    border-left size solid color
+    border-top size solid transparent
+  if direction == 'left'
+    border-bottom size solid transparent
+    border-right size solid color
+    border-top size solid transparent
+  height 0
+  width 0
+
+// @mixin
 // @param Color link
 // @param Color visited
 // @param Color hover
