--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -38,26 +38,22 @@ CLOCKS_MAX_WIDTH = 40rem // = 512px
 // @type Number
 CLOCK_OFFSET = (Clock.SIZE - Clock.HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH) * CLOCK_WIDTH
 
-// @type
-// Colors = {
-//   {
-//     name: white
-//     face: white
-//     hands: black
-//   },
-//   {
-//     name: black
-//     face: black
-//     hands: white
-//   },
-//   {
-//     name: red
-//     face: #c00
-//     hands: white
-//   },
-//   {
-//     name: yellow
-//     face: yellow
-//     hands: black
-//   }
-// }
+// @type Hash
+Colors = {
+  'white': {
+    face: white
+    hands: black
+  },
+  'black': {
+    face: black
+    hands: white
+  },
+  'red': {
+    face: #c00
+    hands: white
+  },
+  'yellow': {
+    face: yellow
+    hands: black
+  }
+}
