--- a/src/stylus/clock/_root_vars.styl
+++ b/src/stylus/clock/_root_vars.styl
@@ -6,22 +6,10 @@
   --transition-theme 1.5s
   --fineprint px_to_em(12)
 
-  // TODO: Make this a hash and loop
-  [color=white]
-    --face white
-    --hands black
-
-  [color=black]
-    --face black
-    --hands white
-
-  [color=red]
-    --face #c00
-    --hands white
-
-  [color=yellow]
-    --face yellow
-    --hands black
+  for name, values in Colors
+    [color={name}]
+      --face '%s' % values.face
+      --hands '%s' % values.hands
 
   [theme=light]
     --background #f7f7f7
