style tweaks and refactoring

--- a/src/stylus/clock/_root_vars.styl
+++ b/src/stylus/clock/_root_vars.styl
@@ -2,8 +2,8 @@
   --footer-height px_to_rem(60)
   --header-height px_to_rem(44)
   --site-header px_to_rem(16)
-  --transition .3s
-  --transition-theme 1.5s
+  --transition .3s ease-out
+  --transition-theme 1s ease-out
   --fineprint px_to_em(12)
 
   for name, values in Colors
