ROYGBIV color palette

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -7,7 +7,7 @@ BUTTON_HEIGHT = px_to_rem(40)
 MENU_ARROW = 10px
 
 // @const String
-MENU_ITEM_SIZE = px_to_rem(32)
+MENU_ITEM_SIZE = px_to_rem(28)
 
 // @type Hash
 Breakpoint = {
@@ -52,8 +52,28 @@ Colors = {
     face: #c00
     hands: white
   },
+  'orange': {
+    face: orange
+    hands: black
+  },
   'yellow': {
     face: yellow
+    hands: black
+  },
+  'green': {
+    face: green
+    hands: white
+  },
+  'blue': {
+    face: blue
+    hands: white
+  },
+  'indigo': {
+    face: indigo
+    hands: white
+  },
+  'violet': {
+    face: violet
     hands: black
   }
 }
