--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -4,7 +4,7 @@
 BUTTON_HEIGHT = px_to_rem(40)
 
 // @const String
-MENU_ARROW = 10px
+MENU_ARROW = px_to_rem(12)
 
 // @const String
 MENU_ITEM_SIZE = px_to_rem(28)
@@ -44,10 +44,6 @@ Colors = {
     face: white
     hands: black
   },
-  'black': {
-    face: black
-    hands: white
-  },
   'red': {
     face: #c00
     hands: white
@@ -75,5 +71,9 @@ Colors = {
   'violet': {
     face: violet
     hands: black
+  },
+  'black': {
+    face: black
+    hands: white
   }
 }
