--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -34,3 +34,12 @@ svg
   pointer-events none
   vertical-align middle
   width 100%
+
+// Remove all default styles from form elements.
+button
+[type=checkbox]
+[type=checkbox]
+  appearance none
+  background none
+  border 0
+  outline 0
