new Themifier custom element created from prior Theme class

--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -15,10 +15,10 @@
   margin-right '-%s%' % (CLOCK_OFFSET * 4)
   padding '%s% %s% %s%' % ((CLOCK_OFFSET * 2) (CLOCK_OFFSET * 2) CLOCK_OFFSET)
 
-my-clock
+analog-clock
   display block
 
-.clocks__frame > my-clock
+.clocks__frame > analog-clock
   flex 0 0 (CLOCK_WIDTH * 100%)
   height 100%
   margin '-%s% 0 0 -%s%' % (CLOCK_OFFSET CLOCK_OFFSET)
