--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -35,6 +35,9 @@ svg
   vertical-align middle
   width 100%
 
+svg path
+  fill currentColor
+
 // Remove all default styles from form elements.
 button
 [type=checkbox]
